--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Tasker</string>
+    <string name="press_again_to_exit">Press again to exit</string>
 </resources>
