--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
-    <string name="app_name">Tasker</string>
+    <string name="app_name">My Day</string>
     <string name="press_again_to_exit">Press again to exit</string>
+    <string name="new_task">New Task</string>
+    <string name="summary">Summary</string>
 </resources>
