--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="press_again_to_exit">Press again to exit</string>
     <string name="new_task">New Task</string>
     <string name="summary">Summary</string>
+    <string name="settings">Settings</string>
 </resources>
