--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="groups">Groups</string>
     <string name="favorite_first">Favorite First</string>
     <string name="font_size">Font Size</string>
+    <string name="task_automatically_saves_on_exit">Task automatically saves on exit</string>
 </resources>
