--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,7 +18,7 @@
     <string name="enabled">Enabled</string>
     <string name="custom">Custom</string>
     <string name="about">About</string>
-    <string name="copyright">2018 © Nazar Suhovich</string>
+    <string name="copyright">Developed by: Nazar Suhovich</string>
     <string name="rate_app">Rate App</string>
     <string name="send_feedback">Send Feedback</string>
     <string name="source_code">Source Code</string>
