Improve navigation and flexibility.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,4 +30,5 @@
     <string name="delete_this_group_">Delete this group?</string>
     <string name="there_is_no_groups_go_to_settings_to_add_one">There is no groups. Go to Settings to add one.</string>
     <string name="use_button_to_create_new_group">Use + button to create new group.</string>
+    <string name="you_complete_all_your_tasks">You complete all your tasks.</string>
 </resources>
