--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,4 +38,5 @@
     <string name="local">Local</string>
     <string name="group_channel">Group notification channel</string>
     <string name="default_group_notifications">Default channel</string>
+    <string name="aa">Aa</string>
 </resources>
