--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,4 +40,5 @@
     <string name="default_group_notifications">Default channel</string>
     <string name="aa">Aa</string>
     <string name="no_tasks">No tasks</string>
+    <string name="notification_on_boot">Notification On Boot</string>
 </resources>
