--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,4 +42,5 @@
     <string name="no_tasks">No tasks</string>
     <string name="notification_on_boot">Notification On Boot</string>
     <string name="dark_mode">Dark Mode</string>
+    <string name="web_site">Web site</string>
 </resources>
